syntax = "proto3";

package com.metao.book;
import "google/protobuf/timestamp.proto";

option java_multiple_files = true;
option java_package = "com.metao.book.shared";

message OrderPaymentEvent {
  string id = 1;
  // Created updated date.
  google.protobuf.Timestamp create_time = 2;
  string customerId = 3;
  string productId = 4;
  string paymentId = 5;
  string orderId = 6;
  Status status = 7;
  string errorMessage = 8;

  enum Status {
    SUCCESSFUL = 0;
    FAILED = 1;
  };

  message UUID {
    // typedef string
  }
}

